# liquidio

./: .cursorignore  .env.example  .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  foundry.toml
contracts/: MockERC20.sol  SimpleLendingProtocol.sol
contracts/test/: LendingProtocol.t.sol
scripts/: cleanup.sh  deploy_contracts.sh  run_benchmark.sh
src/: backtesting.rs  blockchain.rs  config.rs  executor.rs  liquidation_detector.rs  main.rs  mempool_streamer.rs  metrics.rs  simulator.rs
