[package]
name = "liquidio"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Ethereum integration
ethers = { version = "2.0", features = ["ws", "rustls", "abigen"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time and metrics
csv = "1.3"
chrono = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
hex = "0.4"
bytes = "1.5"

[dev-dependencies]
# Testing utilities
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true


